:sparkles: FEAT: 정원 추가 테스트 코드 추가